@@ -186,6 +186,7 @@
     <Compile Include="Project\CSharpProjectParameters.cs" />
     <Compile Include="Parser\CSharpFormatter.cs" />
     <Compile Include="Gui\NRefactoryTemplateParameterDataProvider.cs" />
+    <Compile Include="Syntax\CSharpSyntaxMode.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ChangeLog" />
